몇번문제 어디까지함
 css 2주를 3주로 바꿈

--- a/subin.html
+++ b/subin.html
@@ -121,7 +121,7 @@ header.onclick = function(){
     <h3>웹프로그래밍 수업 일정</h3>
     <p>HTML 1주</p>
     <p>JAVASCRIT 2주</p>
-    <p>CSS 2주</p>
+    <p>CSS 3</p>
     <p>jQuery 2주</p>
 
     <h3>웹프로그래밍 수업 일정</h3>
