--- a/midterm.html
+++ b/midterm.html
@@ -27,6 +27,36 @@
     #header:active{
       color:yellow;
     }
+    #intro{
+      background-color: yellow;
+    }
+    #subintro{
+      margin-left: 300px;
+    }
+    #leftbar{
+      background-color : green;
+        position: fixed;
+      left:0px; top:100px; bottom: 680px;
+      width : 150px;
+      height :160px;
+    }
+    #rightbar{
+      background-color : orange;
+      position: fixed;
+      left:900px; top:100px; bottom: 670px;
+      width : 120px;
+      height : 180px;
+    }
+    #side{
+      color:white;
+    }
+    #yuimg{
+      text-align : center;
+    }
+    img{
+      bottom :0px;
+    }
+
     nav, ul, li {
       border: 0;
       margin: 0;
@@ -111,33 +141,6 @@
       display: none;
       background-color: white;
     }
-    #intro{
-      background-color: yellow;
-    }
-    #subintro{
-      margin-left: 300px;
-    }
-    #leftbar{
-      background : green;
-      position: fixed;
-      left:0px; top:100px; bottom: 680px;
-      width : 150px;
-    }
-    #rightbar{
-      background : orange;
-      position: fixed;
-      left:900px; top:100px; bottom: 670px;
-      width : 120px;
-    }
-    #side{
-      color:white;
-    }
-    #yuimg{
-      text-align : center;
-    }
-    img{
-      bottom :0px;
-    }
 
     </style>
   <script>
@@ -157,13 +160,28 @@
     var wcintro2 = document.getElementById('wcintro2');
     var wcintro3 = document.getElementById('wcintro3');
     wintro1.onclick=function(){
-      wintro1.style.color="red";
+      if(wintro1.style.color=="red"){
+        wintro1.style.color="black";
+      }
+      else{
+        wintro1.style.color="red"
+      }
     };
     wintro2.onclick=function(){
-      wintro2.style.color="red";
+      if(wintro2.style.color=="red"){
+        wintro2.style.color="black";
+      }
+      else{
+        wintro2.style.color="red"
+      }
     };
     wintro3.onclick=function(){
-      wintro3.style.color="red";
+      if(wintro3.style.color=="red"){
+        wintro3.style.color="black";
+      }
+      else{
+        wintro3.style.color="red"
+      }
     };
     wcintro1.onclick=function(){
       wcs1.style.color="red";
@@ -333,14 +351,17 @@
     </form>
   </div>
   </div>
-  <div id = leftbar>
+
+  <div id = "leftbar">
     <h2 id= "side">사이드 메뉴</h2>
     <p>메뉴<BR>메뉴<BR>메뉴<BR>메뉴</p>
     </div>
-    <div id = rightbar>
+
+    <div id = "rightbar">
     <h2>고정 메뉴</h2>
     <p>메뉴<BR>메뉴<BR>메뉴<BR>메뉴<BR>메뉴</p>
     </div>
+
     <p><i><a href = "http://www.yu.ac.kr">영남대학교</a>기계IT대학
       <a href = "http://cse.yu.ac.kr">컴퓨터공학과 </i></p>
     <audio src="music.mp3" controls = "controls"></audio>
