--- a/2번.html
+++ b/2번.html
@@ -33,13 +33,15 @@
 				color: yellow;
 			}
 			#main{
+				position: absolute;
+				top: 137px;
 				background: yellow;
 				padding-left: 200px;
 				width: 600px;
 			}
 			#sidemenu{
 				position: absolute;
-				top: 134px; left: 0px;
+				top: 137px; left: 0px;
 				background-color: green;
 				width: 200px; height: 110px;
 			}
@@ -49,16 +51,24 @@
 			#fixedmenu{
 				position:fixed;
 				top: 100px;
-				left: 900px;
+				left: 800px;
 				background-color: orange;
 				width: 100px; height: 130px;
 			}
 			#homepage{
 				position: absolute;
+				top: 675px;
 				left: 530px;
+			}
+			#music{
+				position: absolute;
+				top: 683px;
 			}
 			#logoimg{
 				text-align: center;
+				position: absolute;
+				top: 800px;
+				left: 300px
 			}
 			ul#menu > li{
 				display: inline-block;
@@ -71,9 +81,13 @@
 				border-radius: 0px 10px 10px 0px;
 			}
 			ul#menu > li:nth-child(2n){
+				border-style: dotted;
+				border-color: green;
 				background-color: red;
 			}
 			ul#menu > li:nth-child(2n+1){
+				border-style: dotted;
+				border-color: red;
 				background-color: green;
 			}
 			li > a{
@@ -84,6 +98,7 @@
 			}
 			li:hover{
 				background-color: black;
+				color: white;
 			}
 			li:hover > a{
 				color: blue;
@@ -91,6 +106,7 @@
 			li:hover > ul{
 				display: block;
 				background-color: white;
+				color: black;
 				width: 120px;
 				z-index: 100;
 			}
@@ -181,6 +197,11 @@
 				<input type="text" />
 				<select style="width:80px">
 					<option value="2018">2018년</option>
+					<option value="2018">2017년</option>
+					<option value="2018">2016년</option>
+					<option value="2018">2019년</option>
+					<option value="2018">2020년</option>
+					<option value="2018">2021년</option>
 				</select>
 				<input type="submit" value="확인" /><br />
 			</form>
@@ -205,7 +226,9 @@
 		<div id="homepage">
 			<i><a href="http://www.yu.ac.kr">영남대학교</a> 기계IT대학 <a href="http://cse.yu.ac.kr">컴퓨터공학과</a></i>
 		</div>
-		<audio src="music.mp3" controls="controls"></audio>
+		<div id="music">
+			<audio src="music.mp3" controls="controls"></audio>
+		</div>
 		<div id="logoimg">
 			<img src="http://www.yu.ac.kr/_korean/_image-2017/yu_logo.png" />
 		</div>
