--- a/2번.html
+++ b/2번.html
@@ -196,12 +196,16 @@
 				<label for="command">명령&nbsp</label>
 				<input type="text" />
 				<select style="width:80px">
-					<option value="2018">2018년</option>
-					<option value="2018">2017년</option>
-					<option value="2018">2016년</option>
-					<option value="2018">2019년</option>
-					<option value="2018">2020년</option>
-					<option value="2018">2021년</option>
+					<optgroup label="최근 3년">
+						<option value="2018">2018년</option>
+						<option value="2017">2017년</option>
+						<option value="2016">2016년</option>
+					</optgroup>
+					<optgroup label="미래">
+						<option value="2019">2019년</option>
+						<option value="2020">2020년</option>
+						<option value="2021">2021년</option>
+					</optgroup>
 				</select>
 				<input type="submit" value="확인" /><br />
 			</form>
