--- a/exam.html
+++ b/exam.html
@@ -33,34 +33,169 @@
     #subintro{
       margin-left: 300px;
     }
-    </style>
+    #leftbar{
+      background-color : green;
+        position: fixed;
+      left:0px; top:100px; bottom: 680px;
+      width : 150px;
+      height :160px;
+    }
+    #rightbar{
+      background-color : orange;
+      position: fixed;
+      left:900px; top:100px; bottom: 670px;
+      width : 120px;
+      height : 180px;
+    }
+    #side{
+      color:white;
+    }
+    footer{
+      text-align : center;
+    }
 
+    @media print {
+      footer{
+        visibility: visible;
+        position: fixed;
+        bottom : 0;
+        text-align: center;
+      }
+    }
+    @media screen {
+      footer{
+        visibility: hidden;
+      }
+    }
+    img{
+      bottom :0px;
+    }
+
+    nav, ul, li {
+      border: 0;
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+
+    nav {
+      text-align: left;
+
+    }
+    nav > ul {
+      display: inline-block;
+      text-align: center;
+    }
+
+    nav > ul > li {
+      display: inline-block;
+    }
+    nav li > span > a {
+      display: block;
+      text-decoration: none;
+      color : blue;
+    }
+    nav li > a {
+      text-decoration: none;
+      color:black;
+    }
+
+    nav li > span#html {
+      display: block;
+      padding: 10px;
+      border-style: dotted;
+      border-color: red;
+      border-radius: 20px 0px 0px 20px;
+      background-color: green;
+    }
+
+
+    nav li > span#js {
+      display: block;
+      padding: 10px;
+      border-style: dotted;
+      border-color: green;
+
+      background-color: red;
+    }
+    nav li > span#css {
+      display: block;
+      padding: 10px;
+      border-style: dotted;
+      border-color: red;
+
+      background-color: green;
+    }
+    nav li > span#jquery {
+      display: block;
+      padding: 10px;
+      border-style: dotted;
+      border-color: green;
+      border-radius: 0px 20px 20px 0px;
+      background-color: red;
+    }
+
+    nav li:hover {
+      background-color: white;
+    }
+    nav li:hover > ul {
+      display: block;
+    }
+
+    nav li {
+      position: relative;
+      width: 100px;
+    }
+
+    nav li > ul {
+      position: absolute;
+    }
+
+    nav ul ul {
+      display: none;
+      background-color: white;
+    }
+
+    </style>
   <script>
   window.onload = function(){
     var clock = document.getElementById('clock');
     setInterval(function() {
     var now = new Date();
-    var target = new Date('4/23/2018 20:00:00');
+    var target = new Date('4/24/2018 20:00:00');
     var answer = (target.getTime()-now.getTime())/(1000*60);
     answer = parseInt(answer.toString(),0);
     clock.innerHTML = answer;
   }, 1000);
-
     var wintro1 = document.getElementById('wintro1');
     var wintro2 = document.getElementById('wintro2');
     var wintro3 = document.getElementById('wintro3');
     var wcintro1 = document.getElementById('wcintro1');
     var wcintro2 = document.getElementById('wcintro2');
     var wcintro3 = document.getElementById('wcintro3');
-
     wintro1.onclick=function(){
-      wintro1.style.color="red";
+      if(wintro1.style.color=="red"){
+        wintro1.style.color="black";
+      }
+      else{
+        wintro1.style.color="red"
+      }
     };
     wintro2.onclick=function(){
-      wintro2.style.color="red";
+      if(wintro2.style.color=="red"){
+        wintro2.style.color="black";
+      }
+      else{
+        wintro2.style.color="red"
+      }
     };
     wintro3.onclick=function(){
-      wintro3.style.color="red";
+      if(wintro3.style.color=="red"){
+        wintro3.style.color="black";
+      }
+      else{
+        wintro3.style.color="red"
+      }
     };
     wcintro1.onclick=function(){
       wcs1.style.color="red";
@@ -80,7 +215,6 @@
   };
 
   function proceed(){
-
     var input = document.getElementById("command").value;
     var wintro1 = document.getElementById('wintro1');
     var wintro2 = document.getElementById('wintro2');
@@ -88,8 +222,7 @@
     var wcintro1 = document.getElementById('wcintro1');
     var wcintro2 = document.getElementById('wcintro2');
     var wcintro3 = document.getElementById('wcintro3');
-
-     if(input == "웹프로그래밍1")
+     if(input == '웹프로그래밍1')
       {
         wintro1.style.color="red";
         wintro2.style.color="black";
@@ -151,35 +284,45 @@
     <h2 id = "sheader">시험종료까지 남은시간 : <span id = "clock"></span>분</h2>
   </div>
 
-  <div id = "fulldown">
-    <nav>
-    <ul id = "nav">
-      <li><span id = "mt"><a href="#">HTML</a></span></li>
-      <ul class = "sub1">
-        <li>풀다운 메뉴</li>
-        <li>풀다운 메뉴</li>
-        <li>풀다운 메뉴</li>
-        <li>풀다운 메뉴</li>
-      </ul>
+  <div id="fullDown">
+   <nav>
+     <ul id="nav">
+         <li><span id ="html"><a href="#">HTML</a></span>
+           <ul class="sub1">
+             <li><a href="#">풀다운 메뉴</a></li>
+             <li><a href="#">풀다운 메뉴</a></li>
+             <li><a href="#">풀다운 메뉴</a></li>
+             <li><a href="#">풀다운 메뉴</a></li>
+           </ul>
+         </li>
 
-      <li><span id = "mt"><a href="#">JAVASCRIPT</a></span></li>
-      <ul class = "sub1">
-        <li>풀다운 메뉴</li>
-        <li>풀다운 메뉴</li>
-      </ul>
-      <li><span id = "mt"><a href="#">CSS</a></span></li>
-      <ul class = "sub1">
-        <li>풀다운 메뉴</li>
-      </ul>
-      <li><span id = "mt"><a href="#">jQuery</a></span></li>
-      <ul class = "sub1">
-        <li>풀다운 메뉴</li>
-        <li>풀다운 메뉴</li>
-        <li>풀다운 메뉴</li>
-      </ul>
-    </ul>
-  </nav>
-</div>
+         <li><span id ="js"><a href="#">JAVASCRIPT</a></span>
+           <ul class="sub1">
+             <li><a href="#">풀다운 메뉴</a></li>
+             <li><a href="#">풀다운 메뉴</a></li>
+           </ul>
+         </li>
+
+         <li><span id ="css"><a href="#">CSS</a></span>
+           <ul class="sub1">
+             <li>
+               <a href="#">풀다운 메뉴</a>
+             </li>
+           </ul>
+         </li>
+
+          <li><span id ="jquery"><a href="">jQuery</a></span>
+           <ul class="sub1">
+             <li><a href="#">풀다운 메뉴</a></li>
+             <li><a href="#">풀다운 메뉴</a></li>
+             <li><a href="#">풀다운 메뉴</a></li>
+           </ul>
+         </li>
+       </ul>
+
+   </nav>
+   </div>
+
 <div id = "intro">
   <div id = "subintro">
     <h2 id ="wintro1">웹프로그래밍 소개</h2>
@@ -215,21 +358,29 @@
           <option>2020년</option>
         </optgroup>
           </select>
-          <button id = "btn" type="button" onclick="proceed();">확인</button>
+          <button type = "button" onclick="proceed();">확인</button>
         </td>
         </tr>
       </table>
     </form>
   </div>
   </div>
-    <h2>사이드 메뉴</h2>
-    <p>메뉴<BR><BR>메뉴<BR><BR>메뉴<BR><BR>메뉴<BR></p>
+
+  <div id = "leftbar">
+    <h2 id= "side">사이드 메뉴</h2>
+    <p>메뉴<BR>메뉴<BR>메뉴<BR>메뉴</p>
+    </div>
+
+    <div id = "rightbar">
     <h2>고정 메뉴</h2>
-    <p>메뉴<BR><BR>메뉴<BR><BR>메뉴<BR><BR>메뉴<BR><BR>메뉴<BR></p>
+    <p>메뉴<BR>메뉴<BR>메뉴<BR>메뉴<BR>메뉴</p>
+    </div>
 
     <p><i><a href = "http://www.yu.ac.kr">영남대학교</a>기계IT대학
       <a href = "http://cse.yu.ac.kr">컴퓨터공학과 </i></p>
     <audio src="music.mp3" controls = "controls"></audio>
-    </audio>
+    <footer>
+    <p><img src = "http://www.yu.ac.kr/_korean/_image-2017/yu_logo.png"/></p>
+  </footer>
   </body>
 </html>
