--- a/2번.html
+++ b/2번.html
@@ -228,10 +228,10 @@
 			<p>메뉴</p>
 		</div>
 		<div id="homepage">
-			<i><a href="http://www.yu.ac.kr">영남대학교</a> 기계IT대학 <a href="http://cse.yu.ac.kr">컴퓨터공학과</a></i>
+			<i><a href="http://www.yu.ac.kr" style="text-decoration: none;">영남대학교</a> 기계IT대학 <a href="http://cse.yu.ac.kr" style="text-decoration: none;">컴퓨터공학과</a></i>
 		</div>
 		<div id="music">
-			<audio src="music.mp3" controls="controls"></audio>
+			<audio src="music.mp3" type="audio/mp3" controls></audio>
 		</div>
 		<div id="logoimg">
 			<img src="http://www.yu.ac.kr/_korean/_image-2017/yu_logo.png" />
