--- a/2번.html
+++ b/2번.html
@@ -66,9 +66,9 @@
 			}
 			#logoimg{
 				text-align: center;
-				position: absolute;
-				top: 800px;
-				left: 300px
+				position: relative;
+				display: inline-block;
+				top: 650px;
 			}
 			ul#menu > li{
 				display: inline-block;
