--- a/2번.html
+++ b/2번.html
@@ -65,10 +65,10 @@
 				top: 683px;
 			}
 			#logoimg{
-				text-align: center;
-				position: relative;
 				display: inline-block;
-				top: 650px;
+				position: absolute;
+				top: 800px;
+				margin: 0 auto;
 			}
 			ul#menu > li{
 				display: inline-block;
