세로메뉴 갱신
세로메뉴 갱신

--- a/navbar.html
+++ b/navbar.html
@@ -49,7 +49,7 @@
           }
 
           if(con.style.display==""){
-            con.style.display="inline-block";
+            con.style.display="block";
           }
           else{
             con.style.display="";
